--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="sec-1st-div d-half">
             <div class="d-font bdr">
                 <h1>
-                    Stay Focused on
-                </h1>
-                <h1 class="h1-color">
+                    Stay Focused on <br>
+                <span class="h1-color">
                     Mission 2022
+                </span> 
                 </h1>
             </div>
 
@@ -41,11 +41,57 @@
             <img src="img/person/person-1.png" alt="Person">
         </div>
     </section>
-    <section>
-        <div>
+    <section class="mission">
             <h1 class="p-center">
                 My Mission <span class="h1-color">2022</span>
             </h1>
+       <div class="flex">
+        <div id="m-1" class="mis-qta">
+            <img src="img/illustrators/illustrator-1.png" alt="">
+            <h1 class="font-size-20">
+                Mission
+            </h1>
+            <p>
+                Complete Full stack web development in next 4 months. I am a creator myself and very particular about my website as this is my first baby and my new business and he was very good about making feel comfortable.
+            </p>
+        </div>
+        <div id="m-2" class="mis-qta">
+            <img src="img/illustrators/illustrator-2.png" alt="">
+            <h1 class="font-size-20">
+                Vission
+            </h1>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+        </div>
+        <div id="m-3" class="mis-qta">
+            <img src="img/illustrators/illustrator-3.png" alt="">
+            <h1 class="font-size-20">
+                Goals
+            </h1>
+            <p>
+                Can develop any website with HTML, CSS, PHP, MySQL, Bootstrap & JavaScript
+            </p>
+        </div>
+       </div>
+    </section>
+
+    <section class="sec-2 sec-2-ban">
+        <div id="sec-2-img">
+            <img src="img/pictures/coding.png" alt="">
+        </div>
+        <div class="sec-2-pra">
+            <h1>
+                Develop
+            <br>
+                Without Limits
+            </h1>
+            <p>
+                There are four key actions you can take right now to boost the quality of your virtual meetings. Check them out here!
+            </p>
+            <p>
+                <a class="btn" target="_blank" href="https://cryptomehedi.com">Read the Documentation</a>
+            </p>
         </div>
     </section>
 </body>
