--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -94,5 +100,30 @@
             </p>
         </div>
     </section>
+    <section class="sec-2 sec-3-ban">
+        <div class="sec-2-pra">
+            <h1>
+                Know our 
+                <br>Global Community
+            </h1>
+            <p>
+                We could talk until we're blue in the face about this quiz on words for the color "blue," but we think you should take the quiz and find out if you're a whiz at
+            </p>
+            <p>
+                <a class="btn" target="_blank" href="https://cryptomehedi.com">Read the Documentation</a>
+            </p>
+        </div>
+        <div id="sec-2-img">
+            <img src="img/pictures/project.png" alt="">
+        </div>
+    </section>
+    <footer>
+        <h1>
+            <span class="footer-1">Mission</span> <span class="footer-2">2022</span>
+        </h1>
+        <p class="footer-p">
+            Hard work, Perseverance, and Determination for 2022
+        </p>
+    </footer>
 </body>
 </html>
