--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             </p>
         </div>
         <div class="d-half">
-            <img src="img/person/person-1.png" alt="Person">
+            <img class="d-half-img" src="img/person/person-1.png" alt="Person">
         </div>
     </section>
-    <section class="mission">
-            <h1 class="p-center">
+    <section class="mi">
+            <h1 class="p-center ">
                 My Mission <span class="h1-color">2022</span>
             </h1>
        <div class="flex">
@@ -117,6 +117,27 @@
             <img src="img/pictures/project.png" alt="">
         </div>
     </section>
+
+    <section>
+        <div class="sec-3">
+            <div>
+                <img class="sec-2-img" src="img/pictures/Best-website-design-company-in-dhaka-bangladesh.png" alt="">
+            </div>
+            <div class="sec-3-pra">
+                <h1>
+                    SEO <br>Website Development
+                </h1>
+                <p>
+                    SEO or the Search engine optimization is important to any business that operates online. An SEO-friendly site is one that allows a search engine to explore and read pages across the site.
+                </p>
+                <p>
+                    <a class="btn" target="_blank" href="https://cryptomehedi.com">Read the Documentation</a>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
     <footer>
         <h1>
             <span class="footer-1">Mission</span> <span class="footer-2">2022</span>
