--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="sec-5-ban">
         <div class="sec-3">
             <div>
                 <img class="sec-2-img" src="img/pictures/Best-website-design-company-in-dhaka-bangladesh.png" alt="">
