--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
         </div>
         <div class="d-half">
-            <img class="d-half-img" src="img/person/person-1.png" alt="Person">
+            <img class="d-half-img" src="Img/person/person-1.png" alt="Person">
         </div>
     </section>
     <section class="mi">
@@ -53,7 +53,7 @@
             </h1>
        <div class="flex">
         <div id="m-1" class="mis-qta">
-            <img src="img/illustrators/illustrator-1.png" alt="">
+            <img src="Img/illustrators/illustrator-1.png" alt="">
             <h1 class="font-size-20">
                 Mission
             </h1>
@@ -62,7 +62,7 @@
             </p>
         </div>
         <div id="m-2" class="mis-qta">
-            <img src="img/illustrators/illustrator-2.png" alt="">
+            <img src="Img/illustrators/illustrator-2.png" alt="">
             <h1 class="font-size-20">
                 Vission
             </h1>
@@ -71,7 +71,7 @@
             </p>
         </div>
         <div id="m-3" class="mis-qta">
-            <img src="img/illustrators/illustrator-3.png" alt="">
+            <img src="Img/illustrators/illustrator-3.png" alt="">
             <h1 class="font-size-20">
                 Goals
             </h1>
@@ -84,7 +84,7 @@
 
     <section class="sec-2 sec-2-ban">
         <div id="sec-2-img">
-            <img src="img/pictures/coding.png" alt="">
+            <img src="Img/pictures/coding.png" alt="">
         </div>
         <div class="sec-2-pra">
             <h1>
@@ -114,14 +114,14 @@
             </p>
         </div>
         <div id="sec-2-img">
-            <img src="img/pictures/project.png" alt="">
+            <img src="Img/pictures/project.png" alt="">
         </div>
     </section>
 
     <section class="sec-5-ban">
         <div class="sec-3">
             <div>
-                <img class="sec-2-img" src="img/pictures/Best-website-design-company-in-dhaka-bangladesh.png" alt="">
+                <img class="sec-2-img" src="Img/pictures/Best-website-design-company-in-dhaka-bangladesh.png" alt="">
             </div>
             <div class="sec-3-pra">
                 <h1>
